<resources>
    <string name="app_name">911+Emergency</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved Numbers</string>
    <string name="pref">Preferences</string>
    <string name="no_results_to_display">No results to display</string>
    <string name="use_emergency_services_if_you_require_immediate_help_and_non_emergency_services_if_you_require_non_immediate_help">Use emergency services if you require \n <b><u>immediate help</u></b> and non-emergency services \n if you require <b><u>non-immediate help.</u></b></string>
    <string name="use_this_emergency_service">Use these services in your location if you \n require <b><u>immediate help. </u></b></string>
    <string name="non_clickable_emergency">Use these services in your location if you \n require %1$s </string>
    <string name="clickable_immediate_help">immediate help.</string>
    <string name="use_this_non_emergency_service">Use these services in your location if you \n require <b><u>non-immediate help.</u></b></string>
    <string name="clickable_non_immediate">non-immediate help.</string>
    <string name="create_a_profile_to_save_numbers">Create a Profile to Save \nNumbers</string>
    <string name="create_a_profile_so_you_can_start_saving_numbers_from_the_home_and_search_directory_pages">Create a profile so you can start saving \n numbers from the ‘Home’ and ‘Search’ \n directory pages.</string>
    <string name="account">account</string>
    <string name="bookmark">bookmark</string>
    <string name="create_profile">Create Profile</string>
    <string name="you_have_no_numbers_saved">You Have No Numbers Saved</string>
    <string name="access_the_save_number_option_under_icon_on_the_home_and_search_directory_pages">Access the save number option under icon \n on the ‘Home’ and ‘Search’ directory pages.</string>
    <string name="save_numbers_from">Save Numbers from</string>
    <string name="filter">Filter</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report_issue">Report Issue</string>
    <string name="by_saving_this_profile_you_agree_to_911_s_privacy_policy">By saving this profile you agree to 911+’s <br /><u>Privacy Policy</u>.</string>
    <string name="save_profile">Save Profile</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="map_view">Map View</string>
    <string name="map_off">Map Off</string>
    <string name="map_on">Map On</string>
    <string name="logo">logo</string>
    <string name="search_directory">Search Directory</string>
    <string name="privacy">Privacy Policy</string>
    <string name="location">location</string>
    <string name="ambulance">Ambulance \n (911) </string>
    <string name="non_emergency">Crime Report \n (0800 555 111) </string>
    <string name="feedback">Give Feedback</string>
    <string name="crime_report">Crime Report</string>
    <string name="police">Police</string>
    <string name="_090544342242">(090544342242)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_and_non_emergency_service_contacts_for_wherever_you_go">EMERGENCY AND NON-EMERGENCY SERVICE \n CONTACTS FOR WHEREVER YOU GO!</string>
    <string name="place_call"><b>Place Call?</b></string>
    <string name="cancel">CANCEL</string>
    <string name="call">CALL</string>
    <string name="save_number">\u0020 Save Number</string>
    <string name="report_number">\u0020 Report Number</string>
    <string name="cancel_low">Cancel</string>
    <string name="send_report"><b>Send Report</b></string>
    <string name="non_immediate_help_title">Situations Requiring \nNon-Immediate Help…</string>
    <string name="immediate_help_title">Situations Requiring Immediate \nHelp…</string>
    <string name="immediate_help_subtitle">Examples of emergency situations could be:</string>
    <string name="non_immediate_subtitle">Examples of non-emergency situations could \nbe:</string>
    <string name="immediate_text1">• An event that involves an immediate threat to \nperson or property: screams, attacks, gunshots, \nfire, car accident with injuries or any other \nmedical emergency.</string>
    <string name="immediate_text2">• A substantive, in-progress crime. This includes \nfights, break and enters (if there is a suspect on \nscene) or a report of an impaired driver.</string>
    <string name="immediate_text3">• A serious crime that has just occurred (e.g., \nsexual assault or robbery).</string>
    <string name="immediate_text4">• A suspicious circumstance that may indicate \nan immediate criminal act (e.g., robber, vandal).</string>
    <string name="alert_bottom">Definitions and examples obtained from E-Comm Emergency \n Communications for British Columbia Incorporated.</string>
    <string name="non_text1">• Reporting a crime with no suspect (e.g., theft \nof licence plate).</string>
    <string name="non_text2">• Reporting a crime with suspect, but suspect is \nnot on the scene (e.g.,fraud).</string>
    <string name="non_text3">• Reporting a serious crime with suspect, but \nwith a lengthy delay (e.g., assault that occurred \nlast night at a bar).</string>
    <string name="non_text4">• Non-emergency incidents in progress \n(e.g., noisy party, drug use).</string>
    <string name="non_text5">• Ongoing crime issues or crimes that are not in \nprogress (e.g., graffiti or ongoing drug dealing \nwith no suspect on scene).</string>
    <string name="non_text6">• A suspicious circumstance that may indicate \nan ongoing criminal activity (e.g., illegal drug \noperation).</string>
    <string name="first_paragraph">Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You. </string>
    <string name="we_use_your_personal_data_to_provide_and_improve_the_service_by_using_the_service_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_privacy_policy_this_privacy_policy_has_been_created_with_the_help_of_the_privacy_policy_generator">We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Privacy Policy Generator.</string>
    <string name="interpretation_and_definitions">Interpretation and Definitions</string>
    <string name="definitions">Definitions</string>
    <string name="the_words_of_which_the_initial_letter_is_capitalized_have_meanings_defined_under_the_following_conditions_the_following_definitions_shall_have_the_same_meaning_regardless_of_whether_they_appear_in_singular_or_in_plural">The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</string>
    <string name="interpretation">Interpretation</string>
    <string name="interpretation_note">For the purposes of this Privacy Policy: \n<b>Account</b> means a unique account created for You to access our Service or parts of our Service. \n\n<b>Affiliate</b> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.\n\n<b>Application</b> means the software program provided by the Company downloaded by You on any electronic device, named 911+. \n\n<b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to 911+.\n\n<b>Country</b> refers to: Ontario, Canada.\n\n<b>Device</b> means any device that can access the Service such as a computer, a cellphone or a digital tablet.\n\n<b>Personal Data</b> is any information that relates to an identified or identifiable individual.\n\n<b>Service</b> refers to the Application.\n\n<b>Service Provider</b> means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used.\n\n<b>Third-party Social Media Service</b> refers to any website or any social network website through which a User can log in or create an account to use the Service.\n\n<b>Usage Data</b> refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).\n\n<b>You</b> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
</string>
    <string name="collecting_and_using_your_personal_data">Collecting and Using Your Personal Data</string>
    <string name="note_2"><b>Types of Data Collected</b> \n\n<b>Personal Data</b> \n While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:\nEmail address \nFirst name and last name \nPhone number \nAddress, State, Province, ZIP/Postal code, City.\n\n<b>Usage Data</b> \nUsage Data is collected automatically when using the Service. \n\nUsage Data may include information such as Your Device\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.\n\nWhen You access the Service by or through a mobile device, We may collect certain information automatically, including, but not limited to, the type of mobile device You use, Your mobile device unique ID, the IP address of Your mobile device, Your mobile operating system, the type of mobile Internet browser You use, unique device identifiers and other diagnostic data. \n\nWe may also collect information that Your browser sends whenever You visit our Service or when You access the Service by or through a mobile device.</string>
    <string name="note_3">While using Our Application, in order to provide features of Our Application, We may collect, with Your prior permission: \nInformation regarding your location \n\n Pictures and other information from your Device\'s camera and photo library \n\n We use this information to provide features of Our Service, to improve and customize Our Service. The information may be uploaded to the Company\'s servers and/or a Service Provider\'s server or it may be simply stored on Your device. \n\nYou can enable or disable access to this information at any time, through Your Device settings.</string>
    <string name="go_back_to_login">GO BACK TO LOGIN</string>
    <string name="resend_email_verification_link">Resend Email Verification Link</string>
    <string name="resend_verification_link">RESEND VERIFICATION LINK</string>
    <string name="verify_email">Verify Email,</string>
</resources>