<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.emergencyHome.ui.dialogs.ImmediateDialog">

        <ImageButton
            android:id="@+id/cancel_immediate_dialog"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:background="@color/white"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_cancel" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/immediate_help_title"
            android:layout_gravity="center"
            android:minLines="2"
            android:textSize="20sp"
            android:textAppearance="@style/pre_info"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/immediate_help_title" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/immediate_help_subtitle"
            android:text="@string/immediate_help_subtitle"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:maxLines="2"
            android:layout_marginTop="25dp"
            android:textAppearance="@style/alert_dialog_text" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/bullet_1"
            android:textAppearance="@style/alert_dialog_text"
            android:text="@string/immediate_text1"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/bullet_2"
            android:textAppearance="@style/alert_dialog_text"
            android:text="@string/immediate_text2"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/bullet_3"
            android:textAppearance="@style/alert_dialog_text"
            android:text="@string/immediate_text3"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:id="@+id/bullet_4"
            android:textAppearance="@style/alert_dialog_text"
            android:text="@string/immediate_text4"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/immediate_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/alert_bottom"
            android:textAppearance="@style/universal_text"
            android:textColor="#546E7A"
            android:textSize="13sp" />
    </LinearLayout>
</layout>