<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".emergencyPref.ui.PrivacyFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/privacy_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/primary"
                android:theme="@style/ToolBarStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:id="@+id/privacy_title"/>
            </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pref_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_corner_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_toolbar">
            <ScrollView
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:scrollbars="vertical"
                android:id="@+id/scroll_view"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="30dp"
                      android:textColor="@color/on_surface"
                      android:id="@+id/heading"
                      android:layout_marginStart="10dp"
                      android:layout_marginEnd="10dp"
                      android:layout_marginBottom="10dp"
                      android:textAppearance="@style/alert_dialog_text"
                      android:text=" Last updated: March 11, 2021"
                      android:textSize="16sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textAppearance="@style/alert_dialog_text"
                        android:layout_marginTop="20dp"
                        android:text="@string/first_paragraph"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/alert_dialog_text"
                        android:layout_margin="10dp"
                        android:text="@string/we_use_your_personal_data_to_provide_and_improve_the_service_by_using_the_service_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_privacy_policy_this_privacy_policy_has_been_created_with_the_help_of_the_privacy_policy_generator"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interpretation_and_definitions"
                        android:textAppearance="@style/alert_dialog_text"
                        android:textStyle="bold"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/alert_dialog_text"
                        android:textStyle="bold"
                        android:text="@string/definitions"
                        android:layout_marginStart="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/the_words_of_which_the_initial_letter_is_capitalized_have_meanings_defined_under_the_following_conditions_the_following_definitions_shall_have_the_same_meaning_regardless_of_whether_they_appear_in_singular_or_in_plural"
                        android:textAppearance="@style/alert_dialog_text"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interpretation"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textAppearance="@style/alert_dialog_text"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textAppearance="@style/alert_dialog_text"
                        android:text="@string/interpretation_note"/><



                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>