<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_esv"
        android:layout_margin="20dp"
        style="@style/card_item">
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/menu_vertical" />

            <ImageView
                android:id="@+id/image_emer"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/ic_police"
                android:contentDescription="@string/crime_report" />

            <TextView
                android:id="@+id/emergency_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_emer"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:text="@string/police"
                android:textColor="@color/on_surface"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emergency_text"
                android:gravity="center_horizontal"
                android:text="@string/_090544342242"
                android:textColor="@color/ripple_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>