<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.verifydetails.VerifyDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/verify_email"
            style="@style/info_style_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/verify_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/caption2"
            style="@style/info_style_caption"
            android:layout_width="match_parent"
            android:layout_marginStart="27dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resend_email_verification_link"
            app:layout_constraintEnd_toEndOf="@+id/verify_email"
            app:layout_constraintStart_toStartOf="@+id/verify_email"
            app:layout_constraintTop_toBottomOf="@+id/verify_email" />


        <androidx.cardview.widget.CardView
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="25dp"
            android:background="@drawable/custom_ripple"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/sign_in"
            android:background="@drawable/custom_ripple"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/resend_verification_link"
            android:textAppearance="@style/error_text"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/progress_signIn"
            style="?android:attr/progressBarStyle"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/primary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>